--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.10.3",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2"
   }
